--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,19 @@ body {
 .el-card__body {
   padding: 8px;
 }
+
+.Title_text {
+  color: black;
+}
+
+.left20{
+  margin-left:20px ;
+}
+
+.pad20 {
+  padding: 0px 12px;
+}
+
+.top10 {
+  margin-top: 10px;
+}
