--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,10 @@ body {
   background: #f0f1f3;
 }
 
+a:hover{color:#333}
+a {text-decoration: none;color: #333;}
+
+
 .top20 {
   margin-top: 20px;
 }
@@ -15,8 +19,8 @@ body {
   color: black;
 }
 
-.left20{
-  margin-left:20px ;
+.left20 {
+  margin-left: 20px;
 }
 
 .pad20 {
@@ -26,3 +30,5 @@ body {
 .top10 {
   margin-top: 10px;
 }
+
+
