--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import "./transition";
+@import "./font";
+@import "./element";
 
 body {
   margin: 0px;
@@ -6,8 +8,8 @@ body {
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
-a:hover{color:#333}
-a {text-decoration: none;color: #333;}
+a:hover{color:yellow}
+a {text-decoration: none;color: white;}
 
 
 .top20 {
