--- a/src/styles/element.scss
+++ b/src/styles/element.scss
@@ -7,3 +7,33 @@
   width: 134px;
   height: 37px;
 }
+
+.search-box {
+  .el-radio-button--mini .el-radio-button__inner {
+    border: 0px;
+    margin-right: 25px;
+  }
+  .el-checkbox-button--mini .el-checkbox-button__inner {
+    border: 0px;
+    margin-right: 25px;
+  }
+  .el-radio-button:first-child .el-radio-button__inner {
+    border-left: 0px;
+    border-radius: 0px;
+  }
+  .el-radio-button__orig-radio:checked + .el-radio-button__inner {
+    color: #333333;
+  }
+  .el-checkbox-button.is-checked .el-checkbox-button__inner {
+    color: #333333;
+  }
+  .el-checkbox-button:first-child .el-checkbox-button__inner {
+    border-left: 0px;
+    border-radius: 0px;
+  }
+}
+
+$--color-primary: #FFE403;
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
+
+@import "~element-ui/packages/theme-chalk/src/index";
