--- a/src/styles/element.scss
+++ b/src/styles/element.scss
@@ -6,6 +6,7 @@
   font-size: 18px;
   width: 134px;
   height: 37px;
+  padding: 10px;
 }
 
 .content {
@@ -50,7 +51,8 @@
   }
 }
 
-$--color-primary: #FFE403;
+//$--color-primary: #FFE403;
+//$--color-primary:rgb(255, 213, 114);
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
