--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import "./transition";
 @import "./font";
 @import "./element";
+@import "./variables";
+@import "./sidebar";
 
 body {
   margin: 0px;
