--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -6,10 +6,10 @@
   url('../../static/font/PingFang-Medium.ttf'); /* IE9 */
 }
 
-@font-face {
-  /* font-properties */
-  font-family:PingFang-SC-Regular;;
-  src:url('../../static/font/PingFang-Regular.ttf'),
-  url('../../static/font/PingFang-Regular.ttf'),
-  url('../../static/font/PingFang-Regular.ttf'); /* IE9 */
-}
+//@font-face {
+//  /* font-properties */
+//  font-family:PingFang-SC-Regular;;
+//  src:url('../../static/font/PingFang-Regular.ttf'),
+//  url('../../static/font/PingFang-Regular.ttf'),
+//  url('../../static/font/PingFang-Regular.ttf'); /* IE9 */
+//}
