--- a/src/styles/other.scss
+++ b/src/styles/other.scss
@@ -22,6 +22,30 @@
   margin-top: 20px;
 }
 
+.mb20 {
+  margin-bottom: 20px;
+}
+
 .mt10 {
   margin-top: 10px;
+}
+
+.ml10 {
+  margin-left: 10px;
+}
+
+.mt60 {
+  margin-top: 60px;
+}
+
+.mb30 {
+ margin-bottom: 30px;
+}
+
+.mt40 {
+  margin-top: 40px;
+}
+
+.ml20 {
+  margin-left: 20px;
 }
