--- a/src/styles/other.scss
+++ b/src/styles/other.scss
@@ -57,11 +57,25 @@
 .mt30 {
   margin-top: 30px;
 }
-
+.mb10 {
+  margin-bottom: 10px;
+}
 .mb88 {
   margin-bottom: 88px;
 }
 
 .mt103 {
   margin-top: 103px;
+}
+
+.ft14 {
+  font-size: 14px
+}
+
+.ft12 {
+  font-size: 12px
+}
+
+.ft15 {
+  font-size: 15px
 }
