--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -1,15 +1,15 @@
 @font-face {
   /* font-properties */
   font-family:PingFang-SC-Medium;;
-  src:url('../../static/font/PingFang-Medium.ttf'),
-  url('../../static/font/PingFang-Medium.ttf'),
-  url('../../static/font/PingFang-Medium.ttf'); /* IE9 */
+  //src:url('../../static/font/PingFang-Medium.ttf'),
+  //url('../../static/font/PingFang-Medium.ttf'),
+  //url('../../static/font/PingFang-Medium.ttf'); /* IE9 */
 }
 
 @font-face {
   /* font-properties */
   font-family:PingFang-SC-Regular;;
-  src:url('../../static/font/PingFang-Medium.ttf'),
-  url('../../static/font/PingFang-Medium.ttf'),
-  url('../../static/font/PingFang-Medium.ttf'); /* IE9 */
+  //src:url('../../static/font/PingFang-Medium.ttf'),
+  //url('../../static/font/PingFang-Medium.ttf'),
+  //url('../../static/font/PingFang-Medium.ttf'); /* IE9 */
 }
